Correct font-size and alignments

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -10,18 +10,27 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  align-items: center;
+  font-weight: 900;
+  display: flex;
+  padding-left: 20px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   min-width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 16px;
 }
 
 .card {
@@ -41,18 +50,22 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  padding: 40px;
+  padding: 48px;
 }
 
 ul{
   list-style-type: none;
   margin: 0;
-  padding: 16px;
-  font-size: 22px;
+  padding: 0px;
+  font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
 
 }
 
 a{
   text-decoration: none;
   color: white;
+  margin-bottom: 8px;
 }
